Create pixi app with rotating sprite

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8"/>
   <title>Anastasiya Lebedzeva</title>
-
 </head>
 <body>
-  <h1>Anastasiya Lebedeva</h1>
+  <script src="https://unpkg.com/pixi.js@7.x/dist/pixi.min.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
