--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
   <script src="https://unpkg.com/pixi.js@7.x/dist/pixi.min.js"></script>
+  <div id="keys" style="position: absolute; top: 0; left: 0; right: 0; z-index: 1; padding: 32px;">
+    <button id="arrow-right" style="height: 100px; width: 100px;">→</button>
+  </div>
   <script src="index.js"></script>
 </body>
 </html>
