Add left touch control & refactoring

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8"/>
   <title>Anastasiya Lebedzeva</title>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
   <script src="https://unpkg.com/pixi.js@7.x/dist/pixi.min.js"></script>
-  <div id="keys" style="position: absolute; top: 0; left: 0; right: 0; z-index: 1; padding: 32px;">
-    <button id="arrow-right" style="height: 100px; width: 100px;">→</button>
+  <div id="game-controls">
+    <button id="arrow-left" class="control">←</button>
+    <button id="arrow-right" class="control">→</button>
   </div>
   <script src="index.js"></script>
 </body>
