--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <button id="arrow-left" class="control">←</button>
     <button id="arrow-right" class="control">→</button>
   </div>
-  <script src="index.js"></script>
+  <script src="index.js" type="module"></script>
 </body>
 </html>
